2001-08-27  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/pthread/bits/libc-lock.h (__libc_rwlock_t): Only define to
	non-opaque type if __USE_UNIX98.

2001-08-26  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/pthread/bits/libc-lock.h (__libc_lock_t): Define
	non-opaque lock types also if _IO_MTSAFE_IO is defined.

2001-08-23  Roland McGrath  <roland@frob.com>

	* sysdeps/pthread/bits/libc-lock.h (__libc_cleanup_region_start): Take
	new first argument, skip the cleanup handler if it's zero.
	(_LIBC_LOCK_RECURSIVE_INITIALIZER): New macro.
	(__libc_lock_define_initialized_recursive): Use it.
	* sysdeps/pthread/bits/stdio-lock.h: File removed.
	The sysdeps/generic file from the main tree now suffices.

2001-08-22  Roland McGrath  <roland@frob.com>

	* sysdeps/pthread/bits/stdio-lock.h: Include <bits/libc-lock.h>
	instead of <pthread.h>.
	(_IO_lock_t): Define this typedef using __libc_lock_define_recursive.
	(_IO_lock_initializer): Add braces.
	(_IO_lock_lock): Use __libc_lock_lock_recursive.
	(_IO_lock_unlock): Use __libc_lock_unlock_recursive.

	* sysdeps/pthread/bits/libc-lock.h (__libc_lock_recursive_t): New type.
	(__libc_lock_define_initialized_recursive): Use it.
	(__libc_lock_init_recursive): Likewise.
	(__libc_lock_fini_recursive): Likewise.
	(__libc_lock_lock_recursive): Likewise.
	(__libc_lock_trylock_recursive): Likewise.
	(__libc_lock_unlock_recursive): Likewise.
	(__libc_lock_define_recursive): New macro.

2001-08-14  Jakub Jelinek  <jakub@redhat.com>

	* lockfile.c (__pthread_provide_lockfile): New variable.
	* pthread.c (__pthread_require_lockfile): New variable.
	* cancel.c (__pthread_require_lockfile): New variable.

2001-07-31  Ulrich Drepper  <drepper@redhat.com>

	* tst-context.c (threadfct): Initialize context before calling
	makecontext.

	* Examples/ex17.c: Make sure test thread is around long enough.

2001-07-26  kaz Kojima  <kkojima@rr.iij4u.or.jp>

	* sysdeps/sh/pt-machine.h (THREAD_SELF, INIT_THREAD_SELF): Defined.
